# DuitSplit

./: .env.example  .gitignore  CODE_WALKTHROUGH.md  PITCH_GUIDE.md  QNA.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/scripts/: db_dump.py
backend/src/: app.py  calculator.py  models.py  ocr.py  parser.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: app.py
frontend/src/templates/: home.html  index.html  index_backup.html
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
