[project]
name = "duitsplit-backend"
version = "0.1.0"
description = "DuitSplit backend — receipt OCR, parsing, and bill splitting."
requires-python = "==3.14.*"
dependencies = [
    "fastapi==0.118.0",
    "uvicorn==0.37.0",
    "pydantic==2.12.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "google-genai==1.41.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.uv]
package = false
